--- a/spring-cloud.properties
+++ b/spring-cloud.properties
@@ -1,2 +1,3 @@
-text.greeting=Hell World
-text.copyright=o7planning.org
+cassandra.keyspace=todo
+cassandra.entity.base.package=com.spring.springboot.entity
+cassandra.contact.points=localhost
