--- a/spring-cloud.properties
+++ b/spring-cloud.properties
@@ -2,3 +2,4 @@ cassandra.keyspace=todo
 cassandra.entity.base.package=com.spring.springboot.entity
 cassandra.contact.points=localhost
 cassandra.port=9042
+text.greeting=hey
